# vault-tec-employee-portal

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  PROJECT_OVERVIEW.md  README.md  Task_5Da_Qdrant_Migration_Spec.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
docker/: Dockerfile.api  Dockerfile.frontend  nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatHistory.tsx  ChatView.tsx  Layout.tsx  LoginView.tsx  Sidebar.tsx
scripts/: dev.ps1  diag_chunks.py  diag_chunks2.py  spot_check.py
src/: config.py
src/api/: documents.py  main.py
src/pipelines/: chunker.py  cleaner.py  ingest.py  loaders.py  models.py  persist.py  retrieval_chain.py
src/retrieval/: dedup.py  retriever.py
src/ui/: app.py
src/ui/components/: chat_history.py  knowledge_base.py
src/ui/pages/: 1_Chat.py
src/ui/styles/: vault_theme.py
tests/: test_retrieval_chain.py
tests/eval/: chunking_evaluation_log.md  golden_qa_pairs.json  run_eval.py  test_latency.py
tests/unit/: test_dedup.py  test_hybrid_retriever.py  test_pipeline.py  test_smart_chunker.py
tmp/: verify_qdrant.py
